# ATSAHSNA

./: .gitignore  .gitmodules  ATSAHSNA_fr_FR.ts  CMakeLists.txt  LICENSE  README.md  TODO  acquisition.cpp  acquisition.h  benchmark.h  commandlineparser.cpp  commandlineparser.h  constants.h  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  test_helpers.cpp
app/: CMakeLists.txt  MeasureStore.cpp  MeasureStore.h  delegate.cpp  delegate.h  main.cpp
backend/: Acquisition.h  AudioIO.h  BackendRT.cpp  BackendRT.h  CMakeLists.txt  DTF.cpp  DTF.h  Faust.cpp  Faust.h  Jack.cpp  Jack.h  QJack.cpp  QJack.h  RTModule.cpp  RTModule.h  Receiver.h  RingBuffer.h  Sender.h  VectorPool.h  acquisition.cpp  acquisition.h  backend.cpp  backend.h  backendComputeResponse.cpp  backendComputeResponse.h  backendFaust.cpp  backendFaust.h  backendJack.cpp  backendJack.h  backendResponse.cpp  backendRingBuffer.h  filedatasound.cpp  filedatasound.h  measure.cpp  measure.h  signalAnalysis.cpp  signalAnalysis.h  signalFrequencyDomain.cpp  signalFrequencyDomain.h  signalGeneration.cpp  (+16 more)
cmake/: FindFaust.cmake  FindQwt.cmake
debug_tools/: visualize_output.py
signal/: Analysis.cpp  Analysis.h  CMakeLists.txt  FFT.cpp  FFT.h  FrequencyDomain.cpp  FrequencyDomain.h  Generation.cpp  Generation.h  Harmonics.cpp  Harmonics.h  Response.cpp  Response.h  Spectrogram.cpp  Spectrogram.h  signalAnalysis.cpp  signalAnalysis.h  signalFFT.cpp  signalFFT.h  signalFrequencyDomain.cpp  signalFrequencyDomain.h  signalGeneration.cpp  signalGeneration.h  signalHarmonics.cpp  signalHarmonics.h  signalIncrementalResponse.cpp  signalIncrementalResponse.h  signalResponse.cpp  signalResponse.h  signalSpectrogram.cpp  signalSpectrogram.h  test_signal.cpp
view/: BodePlot.cpp  BodePlot.h  CMakeLists.txt  QJackView.cpp  QJackView.h  SpectrogramPlot.cpp  SpectrogramPlot.h  TemporalPlot.cpp  TemporalPlot.h  frequencyplot.cpp  frequencyplot.h  harmonicsplot.cpp  harmonicsplot.h  helper_results_view.cpp  helper_results_view.h  mainwindow.cpp  mainwindow.h  myqcustomplot.cpp  myqcustomplot.h  qbackend.cpp  qbackend.h  qharmonicview.cpp  qharmonicview.h  qmeasure.cpp  qmeasure.h  qmeasuresview.cpp  qmeasuresview.h  qresponse.cpp  qresponse.h  qresults.cpp  qresults.h  qsoundfilewidget.cpp  qsoundfilewidget.h  qspectrogram.cpp  qspectrogram.h  qwtthings.cpp  qwtthings.h  responseview.cpp  responseview.h  roundrobincolor.cpp  (+7 more)
